--- a/natrank-backend/pom.xml
+++ b/natrank-backend/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <java.version>1.7</java.version>
+        <guava.version>18.0</guava.version>
         <tomcat-servlet.version>7.0.54</tomcat-servlet.version>
         <jsp.version>2.1</jsp.version>
         <jstl.version>1.2</jstl.version>
@@ -34,6 +35,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
