--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -38,6 +38,9 @@
     "normalize-scss": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-numeric-input": "^2.0.7",
+    "react-router": "^3.0.2",
+    "react-spinner": "^0.2.7",
+    "react-throttle": "^0.3.0"
   }
 }
