Refactor ranking page

--- a/frontend-v2/tsconfig.json
+++ b/frontend-v2/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "react",
     "module": "commonjs",
     "moduleResolution": "node",
+    "baseUrl": "src",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "declaration": false,
