--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "mdi": "^1.9.33",
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
     "mobx-react-router": "^3.1.2",
