--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -30,6 +30,7 @@
     "webpack-hot-middleware": "^2.17.0"
   },
   "dependencies": {
+    "@types/react-paginate": "^4.2.2",
     "classnames": "^2.2.5",
     "mdi": "^1.9.33",
     "mobx": "^3.1.0",
@@ -39,6 +40,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-numeric-input": "^2.0.7",
+    "react-paginate": "^4.4.2",
     "react-router": "^3.0.2",
     "react-spinner": "^0.2.7",
     "react-throttle": "^0.3.0"
