--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -30,8 +30,10 @@
     "webpack-hot-middleware": "^2.17.0"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.64",
     "@types/react-paginate": "^4.2.2",
     "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
     "mdi": "^1.9.33",
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
