Create separate sub-directories for components; Organize imports

--- a/frontend-v2/tsconfig.json
+++ b/frontend-v2/tsconfig.json
@@ -5,7 +5,10 @@
     "jsx": "react",
     "module": "commonjs",
     "moduleResolution": "node",
-    "baseUrl": "src",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"]
+    },
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "declaration": false,
