--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -41,6 +41,7 @@
     "normalize-scss": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-headroom": "^2.1.5",
     "react-numeric-input": "^2.0.7",
     "react-paginate": "^4.4.2",
     "react-router": "^3.0.2",
