--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^7.0.5",
     "@types/react": "^15.0.12",
     "@types/react-dom": "^0.14.23",
+    "@types/react-motion": "0.0.21",
     "@types/react-router": "^3.0.4",
     "@types/webpack": "^2.2.6",
     "awesome-typescript-loader": "^3.0.7",
@@ -42,10 +43,12 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-headroom": "^2.1.5",
+    "react-motion": "^0.5.0",
+    "react-motion-ui-pack": "^0.10.2",
     "react-numeric-input": "^2.0.7",
     "react-paginate": "^4.4.2",
     "react-router": "^3.0.2",
-    "react-spinner": "^0.2.7",
-    "react-throttle": "^0.3.0"
+    "react-router-transition": "0.0.6",
+    "react-spinner": "^0.2.7"
   }
 }
