--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -2,53 +2,50 @@
   "name": "natrank-frontend-v2",
   "main": "index.js",
   "scripts": {
-    "start": "node --max_old_space_size=256 node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --history-api-fallback --inline --progress --colors --port 9001",
-    "build": "webpack -p --progress --colors"
+    "start": "node --max_old_space_size=256 node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --history-api-fallback --inline --progress --colors --port 9001"
   },
   "devDependencies": {
     "@types/classnames": "^0.0.32",
+    "@types/lodash": "^4.14.64",
     "@types/node": "^7.0.5",
     "@types/react": "^15.0.12",
     "@types/react-dom": "^0.14.23",
     "@types/react-motion": "0.0.21",
+    "@types/react-paginate": "^4.2.2",
     "@types/react-router": "^3.0.4",
     "@types/webpack": "^2.2.6",
     "awesome-typescript-loader": "^3.0.7",
+    "classnames": "^2.2.5",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
-    "mobx-react-devtools": "^4.2.11",
-    "node-sass": "^4.5.2",
-    "react-hot-loader": "^1.3.1",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.13.1",
-    "typescript": "^2.2.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.0"
-  },
-  "dependencies": {
-    "@types/lodash": "^4.14.64",
-    "@types/react-paginate": "^4.2.2",
-    "classnames": "^2.2.5",
     "lodash": "^4.17.4",
     "mdi": "^1.9.33",
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
+    "mobx-react-devtools": "^4.2.11",
     "mobx-react-router": "^3.1.2",
+    "node-sass": "^4.5.2",
     "normalize-scss": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-headroom": "^2.1.5",
+    "react-hot-loader": "^1.3.1",
     "react-motion": "^0.5.0",
     "react-motion-ui-pack": "^0.10.2",
     "react-numeric-input": "^2.0.7",
     "react-paginate": "^4.4.2",
     "react-router": "^3.0.2",
     "react-router-transition": "0.0.6",
-    "react-spinner": "^0.2.7"
+    "sass-loader": "^6.0.3",
+    "spinkit": "^1.2.5",
+    "style-loader": "^0.13.1",
+    "typescript": "^2.2.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.0"
   }
 }
