--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -47,5 +47,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-hot-middleware": "^2.17.0"
+  },
+  "dependencies": {
+    "director": "^1.2.8"
   }
 }
