--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -2,7 +2,7 @@
   "name": "natrank-frontend-v2",
   "main": "index.js",
   "scripts": {
-    "start": "node --max_old_space_size=256 node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --history-api-fallback --inline --progress --colors --port 9001"
+    "start": "node --max_old_space_size=256 ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --history-api-fallback --inline --progress --colors --port 9001"
   },
   "devDependencies": {
     "@types/classnames": "^0.0.32",
@@ -10,9 +10,7 @@
     "@types/node": "^7.0.5",
     "@types/react": "^15.0.12",
     "@types/react-dom": "^0.14.23",
-    "@types/react-motion": "0.0.21",
     "@types/react-paginate": "^4.2.2",
-    "@types/react-router": "^3.0.4",
     "@types/webpack": "^2.2.6",
     "awesome-typescript-loader": "^3.0.7",
     "classnames": "^2.2.5",
@@ -27,19 +25,14 @@
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
     "mobx-react-devtools": "^4.2.11",
-    "mobx-react-router": "^3.1.2",
     "node-sass": "^4.5.2",
     "normalize-scss": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-headroom": "^2.1.5",
     "react-hot-loader": "^1.3.1",
-    "react-motion": "^0.5.0",
-    "react-motion-ui-pack": "^0.10.2",
     "react-numeric-input": "^2.0.7",
     "react-paginate": "^4.4.2",
-    "react-router": "^3.0.2",
-    "react-router-transition": "0.0.6",
     "sass-loader": "^6.0.3",
     "spinkit": "^1.2.5",
     "style-loader": "^0.13.1",
