--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -41,5 +41,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-hot-middleware": "^2.17.0"
+  },
+  "dependencies": {
+    "bem-cn": "^2.1.3"
   }
 }
