--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -2,7 +2,8 @@
   "name": "natrank-frontend-v2",
   "main": "index.js",
   "scripts": {
-    "start": "node --max_old_space_size=256 ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --history-api-fallback --inline --progress --colors --port 9001"
+    "start": "node --max_old_space_size=256 ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --history-api-fallback --inline --progress --colors --port 9001",
+    "build": "node ./node_modules/webpack/bin/webpack -p --progress --colors"
   },
   "devDependencies": {
     "@types/classnames": "^0.0.32",
@@ -42,6 +43,17 @@
     "webpack-hot-middleware": "^2.17.0"
   },
   "dependencies": {
-    "bem-cn": "^2.1.3"
+    "@types/koa": "^2.0.39",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-regenerator-runtime": "^6.5.0",
+    "bem-cn": "^2.1.3",
+    "koa": "^2.2.0",
+    "koa-static": "^3.0.0",
+    "node-fetch": "^1.7.0"
   }
 }
