--- a/frontend-v2/server/tsconfig.json
+++ b/frontend-v2/server/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "*": ["src/*"]
+      "*": ["../src/*"]
     },
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -16,7 +16,8 @@
     "noImplicitReturns": false,
     "removeComments": true,
     "strictNullChecks": false,
-    "outDir": "build"
+    "outDir": "build",
+    "lib": [ "es6", "es7", "dom" ]
   },
   "include": [ "./src/**/*" ]
 }
