--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -42,6 +42,8 @@
     "webpack-hot-middleware": "^2.17.0"
   },
   "dependencies": {
-    "bem-cn": "^2.1.3"
+    "@types/react-modal": "^1.6.6",
+    "bem-cn": "^2.1.3",
+    "react-modal": "^1.7.7"
   }
 }
