--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^0.14.23",
     "@types/react-paginate": "^4.2.2",
     "@types/webpack": "^2.2.6",
+    "@mdi/font": "^5.3.45",
     "awesome-typescript-loader": "^3.0.7",
     "css-loader": "^0.26.1",
     "director": "^1.2.8",
@@ -19,11 +20,10 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
     "lodash": "^4.17.4",
-    "mdi": "^1.9.33",
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
     "mobx-react-devtools": "^4.2.11",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.0",
     "normalize-scss": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
