--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,13 +19,18 @@
     <properties>
         <java.version>1.8</java.version>
         <guava.version>19.0</guava.version>
+        <lombok-version.version>1.16.18</lombok-version.version>
+        <hibernate.version>5.2.12.Final</hibernate.version>
+        <jackson.version>2.8.11</jackson.version>
         <java-time-jsptags.version>1.1.3</java-time-jsptags.version>
+        <mysql-connector.version>8.0.20</mysql-connector.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -49,14 +54,17 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-java8</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
@@ -77,6 +85,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector.version}</version>
         </dependency>
 
         <dependency>
@@ -91,6 +100,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.3.RELEASE</version>
             </plugin>
         </plugins>
     </build>
