--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -24,6 +24,8 @@
         <jackson.version>2.8.11</jackson.version>
         <java-time-jsptags.version>1.1.3</java-time-jsptags.version>
         <mysql-connector.version>8.0.20</mysql-connector.version>
+
+        <docker.image.prefix>fauu</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -101,6 +103,36 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.5.3.RELEASE</version>
+            </plugin>
+            <plugin>
+              <groupId>com.spotify</groupId>
+              <artifactId>dockerfile-maven-plugin</artifactId>
+              <version>1.4.9</version>
+              <configuration>
+                <repository>${docker.image.prefix}/${project.artifactId}</repository>
+              </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <version>${project.version}</version>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
