Dockerize the entire backend

--- a/backend/db/Dockerfile
+++ b/backend/db/Dockerfile
@@ -6,7 +6,7 @@ RUN ["sed", "-i", "s/exec \"$@\"/echo \"not running $@\"/", "/usr/local/bin/dock
 
 ENV MYSQL_ROOT_PASSWORD=root
 
-COPY dump.sql /docker-entrypoint-initdb.d/
+COPY ./dump.sql /docker-entrypoint-initdb.d/
 
 RUN ["/usr/local/bin/docker-entrypoint.sh", "mysqld", "--datadir", "/initialized-db"]
 
