Tidy db Dockerfile

--- a/backend/db/Dockerfile
+++ b/backend/db/Dockerfile
@@ -1,15 +1,8 @@
-# https://github.com/iamdvr/prepopulated-mysql-container-example
-
-FROM mysql:latest as builder
-
+FROM mysql:latest as build
 RUN ["sed", "-i", "s/exec \"$@\"/echo \"not running $@\"/", "/usr/local/bin/docker-entrypoint.sh"]
-
 ENV MYSQL_ROOT_PASSWORD=root
-
 COPY ./dump.sql /docker-entrypoint-initdb.d/
-
 RUN ["/usr/local/bin/docker-entrypoint.sh", "mysqld", "--datadir", "/initialized-db"]
 
 FROM mysql:latest
-
-COPY --from=builder /initialized-db /var/lib/mysql
+COPY --from=build /initialized-db /var/lib/mysql
